<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageViewBackgroundSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_contentDescription"
        android:src="@drawable/background" />

    <LinearLayout
        android:id="@+id/containerRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/button_padding_50dp">

        <TextView
            android:id="@+id/textViewRulesRule1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/button_radius_10dp"
            android:text="@string/success"
            android:textAlignment="center"
            android:textColor="@color/dark_brown"
            android:textSize="@dimen/text_size_messages"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPassingTimeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/button_padding_50dp"
            android:text="@string/label_passing_time"
            android:textAlignment="center"
            android:textColor="@color/dark_brown"
            android:textSize="@dimen/text_size_messages"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPassingTimeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/dark_brown"
            android:textSize="@dimen/text_size_messages"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSaveAndPlay"
            android:layout_width="@dimen/button_width_250dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin_10dp"
            android:background="@drawable/button_press_unpress"
            android:text="@string/saveAndPlay" />

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="@dimen/button_width_250dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin_10dp"
            android:background="@drawable/button_press_unpress"
            android:text="@string/play" />

    </LinearLayout>
</RelativeLayout>