<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/passingDateLabelTextView"
            style="@style/MazeLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/label_passing_date" />

        <TextView
            android:id="@+id/passingDateTextView"
            style="@style/MazeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/levelLabelTextView"
            style="@style/MazeLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/label_level" />

        <TextView
            android:id="@+id/levelTextView"
            style="@style/MazeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_columnWeight="1"
             />

        <TextView
            android:id="@+id/passingTimeLabelTextView"
            style="@style/MazeLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/label_passing_time" />

        <TextView
            android:id="@+id/passingTimeTextView"
            style="@style/MazeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1" />

    </GridLayout>


</ScrollView>